--- a/busstops/templates/jinja2/page.html
+++ b/busstops/templates/jinja2/page.html
@@ -87,8 +87,8 @@
     <div class="motd" style="margin-bottom: 20px; border-radius: 10px; border: 1px solid #1d5560; padding: 20px; box-sizing: border-box;">
     	{% include "motd_partial.html" %}
     </div>
-<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#164450', 'W7W21AYHUU');kofiwidget2.draw();</script>
+<!--<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#164450', 'W7W21AYHUU');kofiwidget2.draw();</script>-->
 <!-- Matomo -->
 <script>
   var _paq = window._paq = window._paq || [];
