--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -121,8 +121,8 @@
     <div class="motd" style="margin-bottom: 20px; padding: 20px; box-sizing: border-box;">
     	{% include "motd_partial.html" %}
     </div>
-<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#164450', 'W7W21AYHUU');kofiwidget2.draw();</script>
+<!--<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#164450', 'W7W21AYHUU');kofiwidget2.draw();</script>-->
 <script defer data-domain="transportthing.uk" src="https://plausible.io/js/script.hash.outbound-links.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
