--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -123,6 +123,7 @@
     </div>
 <!--<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
 <script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#164450', 'W7W21AYHUU');kofiwidget2.draw();</script>-->
+<!-- ads code to be added soon to replace donation link. don't want to donate because you think its a scummy thing to ALLOW people to donate to a project? cool, have ads instead. -->
 <script defer data-domain="transportthing.uk" src="https://plausible.io/js/script.hash.outbound-links.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
