Livery Viewer adding to TransportThing?

--- a/busstops/templates/rules.html
+++ b/busstops/templates/rules.html
@@ -50,7 +50,7 @@
 	    
 	    <h3>How do I add or edit a livery?</h3>
 	    
-	    <p>Sorry, only a few users can do that, you can request them in our <a href="https://transportthing.uk/discord">discord</a>.</p>
+	    <p>Sorry, only a few users can do that, you can request them in our <a href="https://transportthing.uk/discord">discord</a>. Alternatively, you could try and make your own using our <a href="https://transportthing.uk/liveries"> Official Livery Creator</a>.</p>
 	    
 	    <h3>I have a different question, or maybe a comment</h3>
 	
