--- a/busstops/templates/liveries.html
+++ b/busstops/templates/liveries.html
@@ -88,7 +88,7 @@
 
     <!-- Left  -->
     <div class="md:w-1/3 w-full">
-      <h1 class="text-3xl font-bold mb-4 text-center md:text-left text-light-mode dark:text-dark-mode">Transport Thing's Livery (CSS) Viwer</h1>
+      <h1 class="text-3xl font-bold mb-4 text-center md:text-left text-light-mode dark:text-dark-mode">Transport Thing's Livery (CSS) Viewer</h1>
 
       <label for="gradient" class="block mb-2 text-sm font-medium text-light-mode dark:text-dark-mode">Enter CSS Gradient</label>
       <textarea
