Add 'Log In' button to unauthenticated users website Footer as an easier way for new or returning users to login and sign up. :)

--- a/busstops/templates/index.html
+++ b/busstops/templates/index.html
@@ -30,6 +30,7 @@
         <h2>Map</h2>
         <p><a href="/map" class="button" style="color: white">Track buses and find bus stops!</a></p>
         <p><a href="/satellites" class="button" style="color: white">Check out the Satellite Hub</a></p>
+        <p><a href="/region/TT" class="button" style="color: white">Fancy a Train List? We've Got You!</a></p>
     </div>
 </div>
 <h2>Regions</h2>
