--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -98,29 +98,36 @@
         <form action="{% url 'logout' %}" method="POST">
             <ul class="user">
                 <li><a href="/accounts/users/{{ user.id }}">User: {{ user.id }} | {{ user.username|default:'' }}</a></li>
-        {% if user.trusted %}
-                <li><a href="/vehicles/edits?status=pending" title="Requires Trusted status to view">Pending Edits</a></li>
-        {% else %}
-                <li><a href="/vehicles/edits?user={{ user.id }}&status=approved" title="Approved Edits">Your Edits</a></li>
-        {% endif %}
-        {% if user.is_staff %}
-                <li><a href="/admin" title="Admin Panel">Admin Panel</a></li>
-        {% endif %}
+                {% if user.trusted %}
+                      <li><a href="/vehicles/edits?status=pending" title="Requires Trusted status to view">Pending Edits</a></li>
+                {% else %}
+                  <li><a href="/vehicles/edits?user={{ user.id }}&status=approved" title="Approved Edits">Your Edits</a></li>
+                {% endif %}
+                {% if user.is_staff %}
+                       <li><a href="/admin" title="Admin Panel">Admin Panel</a></li>
+                {% endif %}
                 <li>
                     {% csrf_token %}
                     <button type="submit" class="button" style="color: white;">Log out</button>
                 </li>
             </ul>
         </form>
+    {% else %}
+        <form action="{% url 'login' %}" method="get">
+            <button type="submit" class="button" style="color: white;">Login</button>
+        </form>
     {% endif %}
+
     <ul>
-	<li><a href="/rules">Rules & FAQ</a></li>
+        <li><a href="/rules">Rules & FAQ</a></li>
         <li><a href="/discord">Discord</a></li>
         <li><a href="/contact">Contact</a></li>
         <li><a href="/updates">Site Updates</a></li>
         <!--<li><a href="/data">Data sources</a></li>
-	<li><a href="/privacy">Privacy policy</a></li>-->
+        <li><a href="/privacy">Privacy policy</a></li>-->
     </ul>
+
+
     <div class="motd" style="margin-bottom: 20px; padding: 20px; box-sizing: border-box;">
     	{% include "motd_partial.html" %}
     </div>
