--- a/busstops/templates/satellites_home.html
+++ b/busstops/templates/satellites_home.html
@@ -86,10 +86,12 @@
             <a href="/satellites/all" class="satellite-link-card">
                 <h3>All Tracked Satellites</h3>
                 <p>A comprehensive view of all active satellites currently tracked by the system.</p>
+                <p>PLEASE NOTE: this page is *** VERY *** slow. it loads all 12 thousand satellites and WILL lockup your browser.</p>
             </a>
             <a href="/satellites/starlink" class="satellite-link-card">
                 <h3>Starlink Constellation</h3>
                 <p>See SpaceX's Starlink satellites. Be aware, this can be many dots!</p>
+                <p>PLEASE NOTE: this page is *** VERY *** slow. it loads all 4 thousand starlink satellites and can lockup your browser.</p>
             </a>
             <a href="/satellites/oneweb" class="satellite-link-card">
                 <h3>OneWeb Constellation</h3>
@@ -111,9 +113,17 @@
                 <h3>GOES Satellites</h3>
                 <p>Track Geostationary Operational Environmental Satellites.</p>
             </a>
-            <a href="/satellites/soon" class="satellite-link-card">
+            <a href="/satellites/qianfan" class="satellite-link-card">
                 <h3>QIANFAN Satellites</h3>
                 <p>Track QIANFAN Satellites.</p>
+            </a>
+            <a href="/satellites/soon" class="satellite-link-card">
+                <h3>Eutelsat Satellites</h3>
+                <p>Track Eutelsat Satellites.</p>
+            </a>
+            <a href="/satellites/soon" class="satellite-link-card">
+                <h3>Intelsat Satellites</h3>
+                <p>Track Intelsat Satellites.</p>
             </a>
             <a href="/satellites/kuiper" class="satellite-link-card">
                 <h3>Kuiper Satellites</h3>
