--- a/busstops/templates/jinja2/page.html
+++ b/busstops/templates/jinja2/page.html
@@ -37,7 +37,7 @@
 (function () {
     var a = localStorage && localStorage["map-style"];
     var m = window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
-    if ((!a || a === "alidade_satellite") && m || a && a.indexOf("_dark") !== -1) {
+    if ((!a || a === "aws_satellite") && m || a && a.indexOf("_dark") !== -1) {
         document.body.classList.add("dark-mode")
     }
 })();
